@@ -1,16 +1,16 @@
-598ea91522f724c1afe2294c154f4f88 *ChangeLog
-ab18cc8455d027485682b01df03f8eba *DESCRIPTION
+8ee875c9a07f0e192e5dc7d8ac8da210 *ChangeLog
+0927261fc75777e12a4cc47821c8a3c9 *DESCRIPTION
 93e9291556ca0db9623dc3c0f906d598 *NAMESPACE
 9b8b73db80de16a79045de94643ff69f *R/AIC.modgam.R
-af4189c036b214ec04b127a36324f315 *R/MapGAM.version.R
+890c859a7ff5ceba63e0577a0330c8b3 *R/MapGAM.version.R
 7e13153c8ae594307e74a815cd5b2fa1 *R/coef.gamcox.R
 d717b010fce5ea885b1d2998819fb1da *R/coef.modgam.R
 c26af9fe0e9d41ee8f0829f2186a15f7 *R/colormap.R
 1d327194916e7aea258cb8acf47418d4 *R/dls.R
 603f276955210e3cdf075b434547618f *R/formula.gamcox.R
 68be2bb7e901b6ab4725fd6cd42366f7 *R/formula.modgam.R
-ea35feba0042b55988bfa010ec225408 *R/gamcox.R
-367af466b8a094a4cadf4f17aea6109c *R/gamcox.fit.R
+518969819b6cdd9adb8ef91f184ab0df *R/gamcox.R
+f4d5cb4885250e1ff19eb079e87852fd *R/gamcox.fit.R
 f38aaf7a80f1051d22a1774779244605 *R/modgam.R
 45afc87839da3e17676cafb5ab6345d2 *R/mypredict.gam.R
 e48d18bbdb6c1d7dd4cc20683300ec46 *R/optspan.R
@@ -26,7 +26,7 @@ b3f582871b17e8006a7ec6794337d1c7 *R/print.modgam.R
 7dd05119ee405dfc4c2e5af44160df19 *R/summary.modgam.R
 7d1becaa5461ffc703b59fb412d8d14c *R/toformula.R
 08783a37a96f1e7b521f4371a0ce2dc0 *R/trimdata.R
-7080893e02c49cd296d4424b9be55069 *build/partial.rdb
+1bf18d9c216b8d95033f0bd2fe2906b2 *build/partial.rdb
 fa614af1963e6fb7ab63a4e3bd3764e9 *data/CAdata.rda
 bcbc66be5236a69a0733d25100f6731e *data/CAgrid.rda
 23145ac44dca74cfb2302271be6cc2b2 *data/CAmap.rda
@@ -40,7 +40,7 @@ a4d344358128e5298ef536d98d46e8cd *man/AIC.modgam.Rd
 0e5177b8cff84007eb9a1706ff005c47 *man/CAmap.Rd
 1fa4d47243e93703e36e4f85bc1a55d4 *man/MAdata.Rd
 e338a9c517a400613997ab8cc573bf53 *man/MAmap.Rd
-19f62697a8b49c3dc4c6f67ba14e86c0 *man/MapGAM-package.Rd
+0b9ce4dd161330fcc991957ff69de3a1 *man/MapGAM-package.Rd
 80045605a66d70915515b9f5e05efd48 *man/MapGAM.version.Rd
 5e408fd324cd7cf8b9aa810565be8727 *man/beertweets.Rd
 af76241aff722a9cec46578df8b49065 *man/coef.gamcox.Rd
@@ -50,17 +50,17 @@ c96e5eba6cffd43ac4daceae8f4b7057 *man/dls.Rd
 6b686065b46f543c65d8c9a4c0677c34 *man/formula.gamcox.Rd
 5dde1ba7bf597c367658fecf56ec4685 *man/formula.modgam.Rd
 fa6e856d47eabc4ce5189d351b75d3bc *man/gamcox.Rd
-413163c186dcecbe39cff54ec53fd98d *man/modgam.Rd
+498403fa9d498edcec27aae9db3b1ccd *man/modgam.Rd
 b8a3e3215052f06eea65cea86c3ca345 *man/mypredict.gam.Rd
 846b0ad3f4a8e34f5fb17c8854a7fbc5 *man/optspan.Rd
-626cdfd89cb5531757effca5bf41955c *man/plot.modgam.Rd
+0ae2d450d6e3dc8b8298f3e0a3dc31a2 *man/plot.modgam.Rd
 a592051d7ae9525568c509131d1ddb13 *man/predgrid.Rd
 d0046088944cef86863cca8960fc5845 *man/predict.gamcox.Rd
 3480aee4d5429544d4ab17af23a02966 *man/print.gamcox.Rd
 e735907e624b4e496b0a02df1a14614b *man/print.modgam.Rd
 8f154c87e3b9dccf32a5f3941a87ad58 *man/residuals.gamcox.Rd
 322046d51ebee013fca83c869f2fb342 *man/residuals.modgam.Rd
-1a75606a15adaee7e575abafa93497b8 *man/sampcont.Rd
+705b3994b94b25d632e5408b8222f9cd *man/sampcont.Rd
 ceb017903cfa0e658c06163de0bb4858 *man/summary.gamcox.Rd
 73134ccd13ce15095b2bcc7d20e36cc8 *man/summary.modgam.Rd
 56df7959bbe53d4c6029f80a8cb0d0e6 *man/toformula.Rd
