@@ -16,7 +16,7 @@ Version: \tab 1.3\cr
 Date: \tab 2023-07-12\cr
 License: \tab GPL-3\cr
 }
-Typical spatial applications will start with the predgrid function to create a regular grid of points within the study area, with optional map boundaries (e.g., a country, state, or regional map).  Crude or adjusted odds ratios, hazard ratios, or continuous outcomes are then estimated at each grid point using the modgam function to smooth by geolocation.  Finally, the predicted values (and optionally, "clusters"--areas of signficantly increased or decreased values determined via permutation tests or confidence intervals) are plotted using the plot or colormap functions.  Most users will use the plot function to create maps from modgam objects, but colormap is provided for backwards compatibility as well as for creating maps from models fit using functions other than modgam.  The trimdata and sampcont functions can be used to restrict data to those within map boundaries and to conduct simple or spatiotemporal stratified sampling from eligible controls.  The optspan function can be used to find an optimal span size for the LOESS smoother used by the modgam function; it is automatically used within the modgam function when the span size is not provided by the user.  These functions can also be applied to non-spatial data when two-dimensional smoothing is of interest, such as investigation of the effects of a mixture of two chemicals.}
+Typical spatial applications will start with the predgrid function to create a regular grid of points within the study area, with optional map boundaries (e.g., a country, state, or regional map available in the maps package, or uploaded from a shapefile using the st_read function in the sf package).  Crude or adjusted odds ratios, hazard ratios, or continuous outcomes are then estimated at each grid point using the modgam function to smooth by geolocation.  Finally, the predicted values (and optionally, "clusters"--areas of signficantly increased or decreased values determined via permutation tests or confidence intervals) are plotted using the plot or colormap functions.  Most users will use the plot function to create maps from modgam objects, but colormap is provided for backwards compatibility as well as for creating maps from models fit using functions other than modgam.  The trimdata and sampcont functions can be used to restrict data to those within map boundaries and to conduct simple or spatiotemporal stratified sampling from eligible controls.  The optspan function can be used to find an optimal span size for the LOESS smoother used by the modgam function; it is automatically used within the modgam function when the span size is not provided by the user.  These functions can also be applied to non-spatial data when two-dimensional smoothing is of interest, such as investigation of the effects of a mixture of two chemicals.}
 
 \author{
 Lu Bai, Scott Bartell, Robin Bliss, and Veronica Vieira
@@ -25,19 +25,19 @@ Send bug reports to \email{sbartell@uci.edu}.
 }
 
 \references{
-Bai L, Gillen DL, Bartell SM, Vieira VM. \doi{10.32614/RJ-2020-001}{Mapping smoothed spatial effect estimates from individual-level data:  MapGAM}. The R Journal 2020, 12:32-48. 
+Bai L, Gillen DL, Bartell SM, Vieira VM. Mapping smoothed spatial effect estimates from individual-level data:  MapGAM. The R Journal 2020, 12:32-48. \doi{10.32614/RJ-2020-001} 
 
 Hastie TJ, Tibshirani RJ. Generalized Additive Models.  (Chapman & Hall/CRC Monographs on Statistics & Applied Probability, Boca Raton, Florida, 1990).  
 
-Kelsall J, Diggle P. \doi{10.1111/1467-9876.00128}{Spatial variation in risk of disease: a nonparametric binary regression approach}. J Roy Stat Soc C-App 1998, 47:559-573. 	
+Kelsall J, Diggle P. Spatial variation in risk of disease: a nonparametric binary regression approach. J Roy Stat Soc C-App 1998, 47:559-573. \doi{10.1111/1467-9876.00128} 	
 
-Tang IW, Bartell SM, Vieira VM. \doi{10.1016/j.sste.2023.100584}{Unmatched Spatially Stratified Controls: A simulation study examining efficiency and precision using spatially-diverse controls and generalized additive models}. Spatial and Spatio-temporal Epidemiology 2023, 45:100584.
+Tang IW, Bartell SM, Vieira VM. Unmatched Spatially Stratified Controls: A simulation study examining efficiency and precision using spatially-diverse controls and generalized additive models. Spatial and Spatio-temporal Epidemiology 2023, 45:100584. \doi{10.1016/j.sste.2023.100584}
 	
-Vieira V, Webster T, Weinberg J, Aschengrau A, Ozonoff D. \doi{10.1186/1476-069X-4-11}{Spatial analysis of lung, colorectal, and breast cancer on Cape Cod: An application of generalized additive models to case-control data}. Environmental Health 2005, 4:11. 
+Vieira V, Webster T, Weinberg J, Aschengrau A, Ozonoff D. Spatial analysis of lung, colorectal, and breast cancer on Cape Cod: An application of generalized additive models to case-control data. Environmental Health 2005, 4:11. \doi{10.1186/1476-069X-4-11} 
 
-Webster T, Vieira V, Weinberg J, Aschengrau A. \doi{10.1186/1476-072X-5-26}{Method for mapping population-based case-control studies using Generalized Additive Models}. International Journal of Health Geographics 2006, 5:26.
+Webster T, Vieira V, Weinberg J, Aschengrau A. Method for mapping population-based case-control studies using Generalized Additive Models. International Journal of Health Geographics 2006, 5:26. \doi{10.1186/1476-072X-5-26}
 
-Young RL, Weinberg J, Vieira V, Ozonoff A, Webster TF. \doi{10.1186/1476-072X-9-37}{A power comparison of generalized additive models and the spatial scan statistic in a case-control setting}. International Journal of Health Geographics 2010, 9:37.
+Young RL, Weinberg J, Vieira V, Ozonoff A, Webster TF. A power comparison of generalized additive models and the spatial scan statistic in a case-control setting. International Journal of Health Geographics 2010, 9:37. \doi{10.1186/1476-072X-9-37}
 
 }
 
